--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   sqflite: ^2.0.0
   path: ^1.8.0
   shared_preferences: ^2.0.7
+  http: ^1.1.0
 
 
   # The following adds the Cupertino Icons font to your application.
